# numbersense

./: .gitignore  Enums.py  Player.py  README.md  TODO.md  adminpwd.json  blacklist.json  learnmode.py  main.py  myfile.json  myfileBackup.json  practicemode.py  pyproject.toml  questions.py  requirements.txt  statistics.json  utils.py  whitelist.json
.github/workflows/: all_pytests.yml  lint.yml  pylint.yml  pytest.yml
__tests__/: TestPlayer.py
tests/: test_database.py  test_enums.py  test_player.py
