[tool.poetry]
name = "repl_nix_numbersense"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"
colorama = "^0.4.6"
pick = "^2.2.0"
tabulate = "^0.9.0"
rich = "^13.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
